<resources>
    <string name="app_name">Stop Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="stop_game_fragment">Stop Game</string>

    <!-- Home Fragment -->
    <string name="home_fragment_label">Stop Game</string>
    <string name="play_game_button">Play Game</string>
    <string name="stop_game_label">Stops Game Rules</string>

    <!-- Drawer menu -->
    <string name="home">Home</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>

    <!-- Games Rules Fragment-->
    <string name="game_rules_image_description">Stops Game Rules </string>
    <string name="game_rules_label">Stops Game Rules </string>

    <!-- Round Selector Fragment -->
    <string name="choose_rounds_label">Choose Rounds</string>
    <string name="five_rounds_text">5 rounds</string>
    <string name="ten_rounds_text">10 rounds</string>
    <string name="start_game_button">Start Game</string>

    <!-- Letter Selector Fragment -->
    <string name="choose_a_letter_title">Choose a letter</string>
    <string name="play_button">Play</string>
    <string name="choose_a_letter_hint">Letter</string>
    <string name="choose_letter_description">This editText will holds the letter chosen to play</string>

    <!-- Name Fragment -->
    <string name="name_title">Write a name</string>
    <string name="name_logo_description">This is the name logo.</string>
    <string name="name_editText">Name</string>
    <string name="next_button">Next</string>

    <!-- Last name Fragment -->
    <string name="last_name_title">Write a Last name</string>
    <string name="last_name_logo_description">This is the Last name logo.</string>
    <string name="last_name_editText">Last name</string>
    <string name="last_name_next_button">Next</string>

    <!-- Food fragment -->
    <string name="food_title">Write a food</string>
    <string name="food_logo_description">This is the food logo.</string>
    <string name="food_editText">Food</string>
    <string name="food_next_button">Next</string>

    <!-- Animals fragment -->
    <string name="animals_title">Write an animal</string>
    <string name="animals_logo_description">This is the animal logo.</string>
    <string name="animals_editText">Animal</string>
    <string name="animals_next_button">Next</string>

    <!-- Country fragment -->
    <string name="country_title">Write a country</string>
    <string name="country_logo_description">This is the country logo.</string>
    <string name="country_editText">Country</string>
    <string name="country_next_button">Next</string>

    <!-- Thing fragment -->
    <string name="thing_title">Write a thing</string>
    <string name="thing_logo_description">This is the thing logo.</string>
    <string name="thing_editText">Thing</string>
    <string name="stop_button">Stop</string>


</resources>
